[package]
name = "jwksclient2"
version = "0.2.0"
authors = ["Ammar Zuberi <ammar@617a.net>"]
edition = "2018"
keywords = [ "jwt", "jwks", "jwk" ]
categories = [ "web-programming", "cryptography", "authentication" ]
license = "MIT"
homepage = "https://github.com/ammarzuberi/jwksclient2"
repository = "https://github.com/ammarzuberi/jwksclient2"
description = "Library to validate JWT tokens using JSON Web Key Set (JWKS)"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.11.0"
reqwest = {version = "0.11.0", default-features = false, features = ["json", "rustls-tls", "rustls"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
regex = "1"
ring = "^0.16.0"

[dev-dependencies]
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tokio-test = "0.4"
